Update .gitignore file to ignore generated files and directories for Java, C#, Python, and TypeScript

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
+# Java
+*.class
+*.jar
+/target/
+/build/
+
+# C#
+bin/
+obj/
+*.exe
+*.dll
+*.pdb
+
+# Python
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pyz
+*.pyw
+*.egg-info/
+dist/
+build/
+*.egg
+
+# TypeScript
+node_modules/
+dist/
+*.js
+*.js.map
+*.d.ts
 .next
-node_modules
