--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "autoprefixer": "^10.4.17",
     "next": "^14.1.0",
+    "pg": "^8.11.3",
     "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.4.1"
+    "react-star-ratings": "^2.3.0",
+    "tailwindcss": "^3.4.1",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "20.11.7",
+    "@types/pg": "^8.11.0",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
+    "@types/react-star-ratings": "^2.3.3",
     "typescript": "5.3.3"
   }
 }
