--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "autoprefixer": "^10.4.17",
+    "lucide-react": "^0.320.0",
     "next": "^14.1.0",
     "pg": "^8.11.3",
     "postcss": "^8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-star-ratings": "^2.3.0",
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "zustand": "^4.5.0"
   },
