--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "autoprefixer": "^10.4.17",
+    "cloudinary": "^2.0.0",
     "lucide-react": "^0.320.0",
     "next": "^14.1.0",
     "pg": "^8.11.3",
